Revised TODO list.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,24 +1,28 @@
 Fble:
-* Test and add support for procs.
- - Fix ref counting / free for proc values.
+* Fix ref counting / free for proc values.
  - FbleProcValue 6.0-02-* should now pass
- - Add threading infrastructure and support for multi-binding exec
+
+* Prototype new reference counting implementation.
 * fix failing langs/fble/8.3-06-poly-apply-recursive-type.tcl
  - Figure out how to deal with reference loops from poly apply cache.
 * Fix failing langs/fble/7.4-06-type-let-bad-mutually-recursive-type.tcl
  - Need to debug to understand what's broken, or clean up ref handling and
    hope that fixes the bug.
-* Prototype new reference counting implementation.
-* Clarify spec on partial and excessive function and poly application
-* Test partial function and excessive function application.
-* Finish implementing evaluator, adding tests, until snake.fble runs.
+
+* Finish implementing evaluator, adding tests, until snake.fble evaluates.
+* Hook up fble-test I/O for snake.fble.
+
+* Port the rest of the fblc tests to fble.
+* Add threading infrastructure and support for multi-binding exec
+   Add a type Thread: tstack, vstack, parent, join count
+   Add thread lists for running threads and threads blocked on a given link.
+
+Fble Cleanup:
 * Better error messages on types that have the same name but different values.
 * Figure out how to make a version of 7.4-06-* for values.
 * Test what gets evaluated at eval vs. exec time for each kind of process.
-
-Fble Cleanup:
-* When to use PUSH instruction and when to do push as part of, e.g. APPLY or
-  STRUCT_VALUE instruction?
+* Clarify spec on partial and excessive function and poly application
+* Test partial function and excessive function application.
 * Consistent naming of Proc things: e.g. ProcExecInstr vs. ExecProcValue
  - Do we even need the proc prefix?
 * Share common code between PROC_TYPE, INPUT_TYPE, and OUTPUT_TYPE?
