Poison memory on free.
To help catch use after free violations. And apparently we have more memory
bugs than I thought...

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,10 @@
 Fble:
-* Find and fix push/pop mismatch
+* Fix use after free failures.
+
+* Fix push/pop mismatch
+ - The FbleExecProcValue is being freed before it's pop instruction is
+   executed, thus making the pop instruction on the stack bogus by the time it
+   comes to execute.
  - FbleProcValue 6.0-02-* should now pass
 
 * Prototype new reference counting implementation.
