--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 Fble:
 * Prototype new reference counting implementation.
+ - Fix bug where CycleAdded returns unintended result when in the process of
+   building a new cycle.
 * Switch to new reference counting implementation.
 * All the failing test cases should, hopefully, now pass.
 
