--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,7 @@
 Fble:
 * Prototype new reference counting implementation.
- - Fix bug in CycleAdded in case of nested cycles.
+ - Expand test coverage.
+ - Improve efficiency.
 * Switch to new reference counting implementation.
 * All the failing test cases should, hopefully, now pass.
 
