--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,5 @@
 Fble:
-* Prototype new reference counting implementation.
- - Expand test coverage.
- - Improve efficiency.
-* Switch to new reference counting implementation.
+* Factor out and switch to new reference counting implementation.
 * All the failing test cases should, hopefully, now pass.
 
 * Finish adding and fixing tests until snake.fble evaluates.
