--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,9 @@
 Fble:
+* Create a separate variable stack in eval
+ - To fix 3.2-07-struct-value-var-stack-smash.tcl and similar bugs.
+* Remove result from ThreadStack
+ - Always push the result to the top of the stack. 
 * Factor out and switch to new reference counting implementation.
- - Move implementation of refs into libfble
 * All the failing test cases should, hopefully, now pass.
 
 * Finish adding and fixing tests until snake.fble evaluates.
