Evaluate body to EVAL before allocating EvalProcValue.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,7 @@
 Fble:
 * Remove result from ThreadStack
- - Always push the result to the top of the stack. 
+ - LET binding save to data stack, then transfer to var stack.
+ - EXEC binding save to data stack then transfer to var stack.
 * Factor out and switch to new reference counting implementation.
 * All the failing test cases should, hopefully, now pass.
 
