Separated out the API and implementation for refs.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,8 @@
 Fble:
-* Factor out and switch to new reference counting implementation.
+* Switch to new reference counting implementation for FbleValue.
+* Many of the failing test cases should, hopefully, now pass.
+
+* Switch to new reference counting implementation for Type.
 * All the failing test cases should, hopefully, now pass.
 
 * Finish adding and fixing tests until snake.fble evaluates.
