Temporally disable memory leak asserting.
While we put the infrastructure in place to switch to the new reference
counting scheme.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 Fble:
 * Switch to new reference counting implementation for FbleValue.
+
+* Re-enable memory leak assertion in fble-test.c
 * Many of the failing test cases should, hopefully, now pass.
 
 * Switch to new reference counting implementation for Type.
