Captured snake memory leak in a spec test.
It's a bug in the cyclic reference counting implementation to do with nested
cycles or some such.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 Fble:
+* Capture failing 7.2-07 in an fble-ref-test and fix it.
 * Finish adding and fixing tests until snake.fble evaluates.
 
 * Add threading infrastructure and support for multi-binding exec
