--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,5 @@
 Fble:
-* Debug failing fble-ref-test.
- - In our traversal to find nodes in the cycle, we must make sure ALL children
-   are checked for reaching the cycle before deciding for a node. It's not
-   enough for a child node to be on the stack of things to do.
-* Finish adding and fixing tests until snake.fble evaluates.
+* Improve test code coverage.
 
 * Add threading infrastructure and support for multi-binding exec
    Add a type Thread: tstack, vstack, parent, join count
