--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,9 @@
 Fble:
 * Improve test code coverage.
+ - polymorphic kind with multiple args
+ - tests for process types
+ - tests for input types
+ - tests for output types
 
 * Add threading infrastructure and support for multi-binding exec
    Add a type Thread: tstack, vstack, parent, join count
@@ -8,10 +12,10 @@ Fble:
 * Hook up fble-test I/O for snake.fble.
  - I should now be able to play snake.
 
-* Expand tests for test coverage.
-* Port the rest of the fblc tests to fble.
+* Clarify spec on partial and excessive function and poly application
+* Test partial function and excessive function application.
 
-* Implement support for modulatity.
+* Implement support for modularity.
 * Port the rest of the fbld tests to fble.
 
 * Delete the obsolete fblc/ and fbld/ code and TODOs.
@@ -20,8 +24,6 @@ Fble Cleanup:
 * Better error messages on types that have the same name but different values.
 * Figure out how to make a version of 7.4-06-* for values.
 * Test what gets evaluated at eval vs. exec time for each kind of process.
-* Clarify spec on partial and excessive function and poly application
-* Test partial function and excessive function application.
 * Share common code between PROC_TYPE, INPUT_TYPE, and OUTPUT_TYPE?
 * Clean up when Eval is done for types.
  - Always eval at Compile, except internal calls to CompileType from in
