--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,15 @@
 Fble:
-* Clarify spec on partial and excessive function and poly application.
-* Test partial function and excessive function application.
+* Draft spec for modularity
+ - update fble.txt with namespace proposal.
+ - think about how to simplify / reuse the awkward combination of lets.
 
 * Implement support for modularity.
 * Port the rest of the fbld tests to fble.
 
 * Delete the obsolete fblc/ and fbld/ code and TODOs.
+
+* Clarify spec on partial and excessive function and poly application.
+* Test partial function and excessive function application.
 
 Fble Cleanup:
 * Better error messages on types that have the same name but different values.
